fixed alignment on login and sign up forms and imaging

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,9 +41,6 @@ h6 {
   margin: 5px 0;
   line-height: 1.25;
 }
-#cat-button {
-  align-items:inherit;
-}
 h1 {
   font-size: 2.25rem;
 }
@@ -114,6 +111,13 @@ button[disabled] {
   opacity: .8;
 }
 
+.log-form {
+  text-align:center;
+  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 img {
   max-width: 75%;
 }
@@ -169,7 +173,15 @@ input:focus {
   background-size: cover;
 }
 .signUp {
-align-items: center;
+  text-align:center;
+  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+.category{
+  width: 656px;
+  margin: 0 auto;
+  text-align: center;
 }
 .flex-row {
   display: flex;
